...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d4t-T1-u4L" customClass="GiniDesignableButton" customModule="CatList" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="50" id="Z4M-bt-9pG"/>
                                            <constraint firstAttribute="height" constant="50" id="hrI-y7-6pK"/>
                                        </constraints>
                                        <state key="normal" image="likeIcon"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="25"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6nD-I2-9NW" customClass="GiniDesignableButton" customModule="CatList" customModuleProvider="target">
                                        <rect key="frame" x="60" y="0.0" width="50" height="50"/>
                                        <state key="normal" image="dislikeIcon"/>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="d4t-T1-u4L" firstAttribute="height" secondItem="6nD-I2-9NW" secondAttribute="height" id="QgE-I6-C8N"/>
                                    <constraint firstItem="d4t-T1-u4L" firstAttribute="width" secondItem="6nD-I2-9NW" secondAttribute="width" id="VEG-1t-mBc"/>
                                </constraints>
...
