...
    var cats = [Cat]()
    
    var seletedCat: Cat?

    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "Cat list"
        
        self.collectionView.registerSupplementaryView(ofKind: UICollectionView.elementKindSectionFooter, LoadingFooterView.self)
        
        getCatList()
    }
    
...
